# made-hpc-hw5

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
data/: top_n.txt
images/: evolution.md  perf.md
mpi/: CMakeLists.txt
mpi/include/: perm.hpp  stdafx.h  utils.h
mpi/src/: cellular_automat.cpp  contact.cpp  utils.cpp  word_counter.cpp
mpi/tests/: test_bin2num.cpp  test_num2bit.cpp
scripts/: meas_time.sh  plot_perf.py  plot_state.py
